scss/legacy/stylesheet.scss
/* ... */
.docs-content section ul li {
    padding-left: 5px;
}

blockquote {
    border-left: 5px solid var(--colorBorderColorSubtle);
    padding: 10px 20px;
}

dl,
ol,
ul {
    margin: 0px;
    padding-left: 16px;
}

ol>li::marker {
    font-weight: bold;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    color: var(--headingInk);
    line-height: 1.5;
    margin-top: 32px;
    margin-bottom: 12px;
}

h1 {
    margin-top: 48px;
    margin-bottom: 12px;
    font-size: 2.5rem;
    font-weight: 700;
    line-height: 1.4;
}

h2 {
    font-style: normal;
    font-weight: 700;
    font-size: 28px;
    line-height: 40px;
    margin-top: 40px;
}

h3 {
    margin-bottom: 8px;
    font-weight: 700;
    font-size: 24px;
    line-height: 32px;
    margin-top: 24px;
    margin-bottom: 8px;
}

h4,
h5,
h6 {
    margin-bottom: 8px;
    font-weight: 700;
    font-size: 24px;
    line-height: 32px;
    margin-top: 24px;
    margin-bottom: 8px;
}

section p,
section blockquote,
div.alert,
ul,
li {
    color: var(--colorInkPrimary);
    font-size: 16px;
    font-weight: 400;
    line-height: 24px;
}

.text-muted {
    color: var(--colorInkSecondary) !important;
}

p.lead {
    margin: 24px 0;
    padding-left: 20px;
    font-weight: 400;
    font-size: 20px;
    line-height: 30px;
}

pre,
blockquote,
.table {
    margin-bottom: 1.8rem;
}

pre {
    margin-top: 1.8rem;
    max-height: 400px;
    overflow-y: scroll;
}

pre code {
    font-size: 12px;
}

.code-block {
    border: 1px solid var(--colorBorderColorSubtle);
    border-radius: var(--borderRadiusDefault);
    margin: 24px 0px;
}


/*=== Highlight Js ===*/

.hljs {
    padding: 1.5rem;
}


/* Progress Bar */

.progress-sm {
    height: 0.5rem !important;
}

.progress-lg {
    height: 1.5rem !important;
}

hr {
    border-top: 1px solid var(--colorBorderColorSubtle);
    border-radius: var(--borderRadiusDefault);
}


/* =================================== */


/*  5. Elements
/* =================================== */


/*=== 5.1 List Style ===*/

.list-style-1>li {
    position: relative;
    list-style-type: none;
    line-height: 24px;
}

.list-style-1>li:after {
    content: ' ';
    position: absolute;
    top: 12px;
    left: -15px;
    border-color: var(--colorBorderColorSubtle);
    border-top: 1px solid;
    border-right: 1px solid;
    width: 6px;
    height: 6px;
    -webkit-transform: translate(-50%, -50%) rotate(45deg);
    transform: translate(-50%, -50%) rotate(45deg);
}

.list-style-2 {
    padding: 0;
}

.list-style-2>li {
    list-style-type: none;
    border-bottom: 1px solid var(--colorBorderColorSubtle);
    padding-top: 12px;
    padding-bottom: 12px;
}

.list-style-2.list-style-light>li {
    border-bottom: 1px solid var(--colorBorderColorSubtle);
}


/*=== 5.2 Changelog ===*/

.changelog {
    list-style: none;
    padding: 0;
}

.changelog .badge {
    width: 90px;
    margin-right: 10px;
    border-radius: 0.2rem;
    text-transform: uppercase;
}

.changelog li {
    line-height: 1.8;
}


/*=== 5.3 Accordion & Toggle ===*/

.accordion .card {
    border: none;
    margin-bottom: 8px;
    background-color: transparent;
}

.accordion .card-header {
    padding: 0;
    border: none;
    background: none;
}

.accordion .card-header a {
    font-size: 16px;
    font-weight: normal;
    padding: 1rem 1.25rem 1rem 2.25rem;
    display: block;
    border-radius: var(--borderRadiusDefault);
    position: relative;
}

.accordion .card-header p {
    margin-top: 0;
    margin-bottom: 0;
}

.accordion .card-header a:hover {
    text-decoration: none;
}

.accordion .card-header a:hover.collapsed {
    color: var(--colorAccent) !important;
}

.accordion:not(.accordion-alternate) .card-header a {
    background-color: var(--colorAccent);
    color: var(--colorAccentInk);
}

.accordion:not(.accordion-alternate) .card-header a.collapsed {
    background-color: var(--colorBackgroundSecondary);
    color: var(--colorInkSecondary);
}

.accordion .card-header a:before {
    position: absolute;
    content: ' ';
    left: 20px;
    top: calc(50% + 2px);
    width: 9px;
    height: 9px;
    border-color: var(--colorBorderColorSubtle);
    border-top: 2px solid;
    border-right: 2px solid;
    -webkit-transform: translate(-50%, -50%) rotate(-45deg);
    transform: translate(-50%, -50%) rotate(-45deg);
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
}

.accordion .card-header a.collapsed:before {
    top: calc(50% - 2px);
    -webkit-transform: translate(-50%, -50%) rotate(135deg);
    transform: translate(-50%, -50%) rotate(135deg);
}

.accordion .card-body {
    line-height: 26px;
}

.accordion.arrow-right .card-header a {
    padding-left: 1.25rem;
}

.accordion.arrow-right .card-header a:before {
    right: 15px;
    left: auto;
}

.accordion.accordion-alternate .card {
    margin: 0;
}

.accordion.accordion-alternate .card-header a {
    padding-left: 1.4rem;
    border-top: 1px solid var(--colorBorderColorSubtle);
    border-radius: 0px;
}

.accordion.accordion-alternate .card:first-of-type .card-header a {
    border-top: 0px;
}

.accordion.accordion-alternate .card-header a:before {
    left: 6px;
}

.accordion.accordion-alternate .card-header a.collapsed {
    color: var(--colorInkSecondary);
}

.accordion.accordion-alternate .card-body {
    padding: 0rem 0 1rem 1.25rem;
}

.accordion.accordion-alternate.arrow-right .card-header a {
    padding-left: 0;
}

.accordion.accordion-alternate.arrow-right .card-header a:before {
    right: 0px;
    left: auto;
}

.accordion.toggle .card-header a:before {
    content: '-';
    border: none;
    font-size: 20px;
    height: auto;
    top: calc(50% + 2px);
    width: auto;
    -webkit-transform: translate(-50%, -50%) rotate(180deg);
    transform: translate(-50%, -50%) rotate(180deg);
}

.accordion.toggle .card-header a.collapsed:before {
    content: '+';
    top: calc(50% - 1px);
    -webkit-transform: translate(-50%, -50%) rotate(0deg);
    transform: translate(-50%, -50%) rotate(0deg);
}
/* ... */

